cambios en servicio y main css

--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ header nav a {
     font-size: 22px;
     font-weight: bold;
 }
-.serv1{
+.Fserv1{
     width: 95%;
     margin: auto;
     overflow: hidden;
