--- a/css/servicios.css
+++ b/css/servicios.css
@@ -193,16 +193,37 @@ aside a {
     position: relative;
 
 }
-.Fcontenedor-frase .Ffrase{
+
+.Fcontenedor-frase .Ffrase {
     color: #ff642a;
     position: relative;
     opacity: 1;
 
 }
-.Fcontenedor-frase img{
-    opacity: 0.5     ;
+
+.Fcontenedor-frase img {
+    opacity: 0.5;
     height: 200px;
-    width: 1429px ;
+    width: 1429px;
     position: absolute;
 }
 
+
+/*lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll*/
+
+.Fvaloracion {
+    background-color: white;
+    width: 95%;
+    height: 220px;
+    margin-left: 40px;
+}
+
+.Fvaloracion h1 {
+    color: orangered;
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+form {
+    text-align: center;
+    font-family: 'Source Sans Pro', sans-serif;
+}
