--- a/css/contacto.css
+++ b/css/contacto.css
@@ -148,3 +148,20 @@ header nav a {
 .XFooter{
     text-align: right;
 }
+
+
+
+
+
+		.Xcontainer{
+			width:5px;
+			max-width:900px;
+		
+		
+		}
+
+.icon {
+    width: 20px;
+    height: 20px;
+
+}
