--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ header div .logo img {
 
     display: block;
     margin: auto;
-    width: 18%;
+    width: 16%;
 }
 
 header nav {
@@ -122,6 +122,16 @@ section img {
     background-color: white;
     margin-bottom: 20px;
     opacity: 90%;
+}
+
+.datos h3 {
+    color: orangered;
+    font-size: 24px;
+}
+
+.noticias h3 {
+    color: orangered;
+    font-size: 24px;
 }
 
 .infos .info2 {
@@ -392,7 +402,27 @@ aside h3 {
 aside a {
     border-radius: 10px;
     background-color: darkorange;
-    color: #9be0e0;
+    color: white;
+    margin-top: 30px;
+    padding: 10px 40px;
+    width: 30%;
+    text-decoration: none;
+}
+
+.b {
+    display: inline-block;
+    margin-left: 20px;
+    margin-top: 50px
+}
+
+aside h3 .b {
+    padding-bottom: 20px;
+}
+
+aside a .b {
+    border-radius: 10px;
+    background-color: darkorange;
+    color: white;
     margin-top: 30px;
     padding: 10px 40px;
     width: 30%;
@@ -505,4 +535,136 @@ aside a {
 
 .condiuso p {
     font-size: 13px
+}
+
+.FcontenedorTodo {
+    float: left;
+    width: 90%;
+    margin-left: 5%;
+    background-color: white;
+    margin-bottom: 20px;
+    opacity: 90%;
+}
+
+.FcontenedorTodo h2 {
+    color: orangered;
+    margin: 25px;
+    font-size: 28px;
+    text-align: center;
+}
+
+.FcontenedorTodo h3 {
+    color: white;
+    font-family: sans-serif;
+}
+
+.Fcontenedor-imagenes {
+    display: flex;
+    width: 85%;
+    margin: auto;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border-radius: 3px;
+}
+
+
+.Fimage {
+    width: 50px;
+    height: 50px;
+    opacity: 1;
+    display: block;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.Fporte {
+    width: 100%;
+    height: 100%;
+}
+
+.Foverlay {
+    margin-top: 50px;
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.Ftexto {
+    background-color: #f09d56;
+    color: white;
+    font-size: 16px;
+    padding: 25px 32px;
+}
+
+.Fcontenedor:hover .Foverlay {
+    opacity: 1;
+}
+
+.Fcontenedor:hover .Fimagen {
+    opacity: 1;
+}
+
+.Fimagen img {
+    width: 100px;
+}
+
+.Fcontenedor-frase {
+    text-align: center;
+    position: relative;
+    float: left;
+    width: 90%;
+    margin-left: 5%;
+    background-color: white;
+    margin-bottom: 20px;
+    opacity: 90%;
+
+}
+
+.Fcontenedor-frase .Ffrase {
+    color: #ff642a;
+    position: relative;
+    opacity: 1;
+
+}
+
+.Fcontenedor-frase .Ffrase-peq {
+    color: dimgray;
+    position: relative;
+    opacity: 1;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+.Fcontenedor-frase img {
+    opacity: 0.5;
+    height: 200px;
+    width: 1429px;
+    position: absolute;
+}
+
+.Fvaloracion {
+    float: left;
+    width: 90%;
+    margin-left: 5%;
+    background-color: white;
+    margin-bottom: 20px;
+    opacity: 90%;
+}
+
+.Fvaloracion h2 {
+    color: orangered;
+    margin: 25px;
+    font-size: 28px;
+    text-align: center;
+}
+
+.Fvaloracion p {
+    margin: 25px;
+    text-align: center;
+    font-size: 18px;
 }
