--- a/css/servicios.css
+++ b/css/servicios.css
@@ -1,124 +1,119 @@
 @font-face {
-    font-family: 'Source Sans Pro';
-    src: url(../fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf);
+  font-family: "Source Sans Pro";
+  src: url(../fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf);
 }
 
 body {
-    background-color: burlywood;
-    font-family: 'Source Sans Pro', sans-serif;
+  background-color: burlywood;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 header {
-    width: 95%;
-    margin: auto;
-    overflow: hidden;
-    background: white;
-    margin-bottom: 20px;
+  width: 95%;
+  margin: auto;
+  overflow: hidden;
+  background: white;
+  margin-bottom: 20px;
 }
 
 .navbar {
-    width: 90%;
-    max-width: 1500px;
-    margin: auto;
-    overflow: hidden;
+  width: 90%;
+  max-width: 1500px;
+  margin: auto;
+  overflow: hidden;
 }
 
 section img {
-    display: block;
-    margin: auto;
-    width: 90%;
-    height: 400px;
-    margin-bottom: 20px;
+  display: block;
+  margin: auto;
+  width: 90%;
+  height: 400px;
+  margin-bottom: 20px;
 }
 
 .infos {
-    width: 100%;
-    display: block;
-    margin: auto;
-    margin-left: 70px;
+  width: 100%;
+  display: block;
+  margin: auto;
+  margin-left: 70px;
 }
 
 .infos .info {
-    float: left;
-    width: 43%;
-    margin-right: 57px;
-    background-color: white;
-    margin-bottom: 20px;
+  float: left;
+  width: 43%;
+  margin-right: 57px;
+  background-color: white;
+  margin-bottom: 20px;
 }
 
 .contacto {
-    width: 90%;
-    display: block;
-    margin: auto;
-    overflow: hidden;
+  width: 90%;
+  display: block;
+  margin: auto;
+  overflow: hidden;
 }
 
 section .datos {
-    float: left;
-    margin: 20px;
+  float: left;
+  margin: 20px;
 }
 
 section .map {
-    float: left;
-    width: 300px;
-    border: 0;
-    margin: 20px;
-
+  float: left;
+  width: 300px;
+  border: 0;
+  margin: 20px;
 }
 
 .noticias {
-    float: left;
-    margin: 20px;
+  float: left;
+  margin: 20px;
 }
 
 header div .logo img {
-    color: black;
-    font-size: 40px;
-    line-height: 100px;
-    float: left;
-    display: block;
-    margin: auto;
-    width: 18%;
+  color: black;
+  font-size: 40px;
+  line-height: 100px;
+  float: left;
+  display: block;
+  margin: auto;
+  width: 18%;
 }
 
 header nav {
-    float: right;
-    line-height: 130px;
+  float: right;
+  line-height: 130px;
 }
 
 header nav a {
-    display: inline-block;
-    color: orangered;
-    text-decoration: none;
-    padding: 10px 20px;
-    line-height: normal;
-    font-size: 22px;
-    font-weight: bold;
+  display: inline-block;
+  color: orangered;
+  text-decoration: none;
+  padding: 10px 20px;
+  line-height: normal;
+  font-size: 22px;
+  font-weight: bold;
 }
-
-
 
 h2 {
-    color: white;
+  color: white;
 }
 
-
 aside h3 {
-    padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 aside a {
-    border-radius: 10px;
-    background-color: darkorange;
-    color: #9be0e0;
-    margin-top: 30px;
-    padding: 10px 40px;
-    width: 30%;
-    text-decoration: none;
+  border-radius: 10px;
+  background-color: darkorange;
+  color: #9be0e0;
+  margin-top: 30px;
+  padding: 10px 40px;
+  width: 30%;
+  text-decoration: none;
 }
 
-
 form {
-    text-align: center;
-    font-family: 'Source Sans Pro', sans-serif;
+  text-align: center;
+  font-family: "Source Sans Pro", sans-serif;
 }
